--- a/releases/loyalty.yaml
+++ b/releases/loyalty.yaml
@@ -14,8 +14,9 @@ spec:
     ref: master
     path: charts/demo
   values:
+    fullnameOverride: loyalty
     image:
-      repository: 483413526957.dkr.ecr.us-east-1.amazonaws.com/poc:master
+      repository: 483413526957.dkr.ecr.us-east-1.amazonaws.com/poc
     replicaCount: 1
     resources:
       requests:
@@ -26,13 +27,10 @@ spec:
       annotations:
         # use the shared ingress-nginx
         kubernetes.io/ingress.class: "nginx"
+        nginx.ingress.kubernetes.io/use-regex: "true"
         nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$2
         nginx.ingress.kubernetes.io/auth-url: "http://auth-service.default.svc.cluster.local/auth"
         nginx.ingress.kubernetes.io/auth-cache-key: '$http_authorization$http_x_poseidon_enterprise_key$http_x_poseidon_client_id'
       hosts:
-      - host:
-        paths:
-        - path: /loyalty(/|$)(.*)
-          backend:
-            serviceName: loyalty-service
-            servicePort: 80
+        - host:
+          paths: ["/loyalty(/|$)(.*)"]
