--- a/charts/demo/values.yaml
+++ b/charts/demo/values.yaml
@@ -39,8 +39,11 @@ service:
 ingress:
   enabled: false
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$2
+    nginx.ingress.kubernetes.io/auth-url: "http://auth-service.poseidon.svc.cluster.local/auth"
+    nginx.ingress.kubernetes.io/auth-cache-key: '$http_authorization$http_x_poseidon_enterprise_key$http_x_poseidon_client_id'
   hosts:
     - host: chart-example.local
       paths: []
