--- a/charts/demo/values.yaml
+++ b/charts/demo/values.yaml
@@ -38,7 +38,7 @@ service:
 
 ingress:
   enabled: false
-  annotations: {}
+  annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$2
