--- a/charts/auth/values.yaml
+++ b/charts/auth/values.yaml
@@ -1,4 +1,4 @@
-# Default values for demo.
+# Default values for auth.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -38,12 +38,9 @@ service:
 
 ingress:
   enabled: false
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$2
-    nginx.ingress.kubernetes.io/auth-url: "http://auth.poseidon.svc.cluster.local/auth"
-    nginx.ingress.kubernetes.io/auth-cache-key: '$http_authorization$http_x_poseidon_enterprise_key$http_x_poseidon_client_id'
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
       paths: []
@@ -63,8 +60,6 @@ resources: {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
-
-env: [] 
 
 nodeSelector: {}
 
