--- a/charts/backend/values.yaml
+++ b/charts/backend/values.yaml
@@ -1,4 +1,4 @@
-# Default values for demo.
+# Default values for backend.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -41,9 +41,7 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$2
-    nginx.ingress.kubernetes.io/auth-url: "http://auth.poseidon.svc.cluster.local/auth"
-    nginx.ingress.kubernetes.io/auth-cache-key: '$http_authorization$http_x_poseidon_enterprise_key$http_x_poseidon_client_id'
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
   hosts:
     - host: chart-example.local
       paths: []
@@ -64,7 +62,7 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
-env: [] 
+env: []
 
 nodeSelector: {}
 
